start planning service in gui!

--- a/ros_packages/drone_gui_ros2/web/index.html
+++ b/ros_packages/drone_gui_ros2/web/index.html
@@ -38,6 +38,12 @@
                 <button class="btn btn-secondary" id="global-controller-disable" onclick="sendGlobalCommand('controller_disable')">
                     ⏸️ Disable Controllers
                 </button>
+                <button class="btn btn-success" id="global-planning-start" onclick="sendGlobalCommand('planning_start')">
+                    🧠 Start Planning All
+                </button>
+                <button class="btn btn-danger" id="global-planning-stop" onclick="sendGlobalCommand('planning_stop')">
+                    🛑 Stop Planning All
+                </button>
             </div>
         </section>
 
