swap position command

--- a/ros_packages/drone_gui_ros2/web/index.html
+++ b/ros_packages/drone_gui_ros2/web/index.html
@@ -44,6 +44,9 @@
                 <button class="btn btn-danger" id="global-planning-stop" onclick="sendGlobalCommand('planning_stop')">
                     🛑 Stop Planning All
                 </button>
+                <button class="btn btn-warning" id="swap-positions" onclick="sendGlobalCommand('swap_positions')">
+                    🔄 Swap Positions
+                </button>
             </div>
         </section>
 
